--- a/status_saver/privacy_policy/index.html
+++ b/status_saver/privacy_policy/index.html
@@ -207,7 +207,7 @@
             <p class="mt-3">
                 If you have any questions or suggestions with respect to this Privacy Policy or our privacy system, or
                 if you want to report any violations of this Privacy Policy or abuse of the application, service or
-                website, please contact us at: <a href="mailto:shubhamsonicse@gmail.com">shubhamsonicse@gmail.com</a>
+                website, please contact us at: <a href="mailto:shubhamsoniplay@gmail.com">shubhamsoniplay@gmail.com</a>
             </p>
         </section>
 
